@@ -1,5 +1,11 @@
 2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* events/ia64/itanium2/unit_masks: comments
+	* utils/op_help.c: add --callgraph to sanitize min events count
+	* utils/opcontrol: pass --callgraph to op_help
+
+2004-02-15  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* daemon/oprofiled.c: send alarm() after fork not before, behavior
 	  changed between 2.4 and 2.6 and according to posix 2.6 is right.
 
